--- a/amazon-app/package.json
+++ b/amazon-app/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^12.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.11.0",
     "react-scripts": "4.0.0",
+    "unstated-next": "^1.1.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
